<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:src="@drawable/logo"
                android:tint="@color/color4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_about"
                android:textColor="@color/color4"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="14dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/version"
                android:textColor="@color/color4"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->
        <LinearLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color5"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_star_border_black_24dp"
                android:tint="@color/color4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="left|center"
                android:text="@string/rate"
                android:textColor="@color/color4"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout><!--section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->
        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color5"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_share_black_24dp"
                android:tint="@color/color4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="left|center"
                android:text="@string/share"
                android:textColor="@color/color4"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout><!--section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->
        <LinearLayout
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color5"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_android_black_24dp"
                android:tint="@color/color4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="left|center"
                android:text="@string/contact"
                android:textColor="@color/color4"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout><!--section-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color4"
            android:gravity="center"
            android:orientation="horizontal" /><!--vr-->

    </LinearLayout>

</ScrollView>
